# haskell-nix-template

./: flake.nix  hello.cabal
